objects/ssot__CareObservation__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AdditionalCode1Id__c</fullName>
        <label>Additional Code1</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AdditionalCode2Id__c</fullName>
        <label>Additional Code2</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BaselineUnitOfMeasureId__c</fullName>
        <label>Baseline Unit of Measure</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BaselineValue__c</fullName>
        <label>Baseline Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__BodySiteId__c</fullName>
        <label>Body Site</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CareObservationCategory__c</fullName>
        <label>Care Observation Category</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CareObservationCodeId__c</fullName>
        <label>Care Observation Code</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CareObservationMethodId__c</fullName>
        <label>Care Observation Method</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CareObservationStatusText__c</fullName>
        <label>Care Observation Status Text</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CareObservationStatus__c</fullName>
        <label>Care Observation Status</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ClinicalEncounterId__c</fullName>
        <label>Clinical Encounter</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ComponentSourceObject__c</fullName>
        <label>Component Source Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ComponentSourceRecordId__c</fullName>
        <label>Component Source Record</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DerivationSourceId__c</fullName>
        <label>Derivation Source</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DerivationSourceObject__c</fullName>
        <label>Derivation Source Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeviceId__c</fullName>
        <label>Device</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveDateTime__c</fullName>
        <label>Effective DateTime</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__EndDateTime__c</fullName>
        <label>End DateTime</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ExpectedValueId__c</fullName>
        <label>Expected Value</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Care Observation Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IssuedDateTime__c</fullName>
        <label>Issued Date Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LowerBaselineValue__c</fullName>
        <label>Lower Baseline Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__NumericValueNumber__c</fullName>
        <label>Numeric Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ObservationEndTime__c</fullName>
        <label>Observation EndTime</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ObservationStartTime__c</fullName>
        <label>Observation StartTime</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ObservationStatusText__c</fullName>
        <label>Observation Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ObservedSubjectAccountId__c</fullName>
        <label>Observed Subject Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ObservedSubjectId__c</fullName>
        <label>Observed Subject</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ObservedUnitOfMeasureId__c</fullName>
        <label>Observed Unit of Measure</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ObservedValueCodeId__c</fullName>
        <label>Observed Value Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ObservedValueDnmtrNumber__c</fullName>
        <label>Observed Value Denominator</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ObservedValueNmrtrNumber__c</fullName>
        <label>Observed Value Numerator</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ObservedValueText__c</fullName>
        <label>Observed Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ObservedValueType__c</fullName>
        <label>Observed Value Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ObservedValueUOMId__c</fullName>
        <label>Observed Value Unit of Measure</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ObserverId__c</fullName>
        <label>Observer</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ObserverObject__c</fullName>
        <label>Observer Object</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PatientSpecimenId__c</fullName>
        <label>Patient Specimen</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProcessingResultText__c</fullName>
        <label>Processing Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedCareObservationId__c</fullName>
        <label>Related Care Observation</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceRequestReferenceId__c</fullName>
        <label>Source Request Reference</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceRequestReferenceObject__c</fullName>
        <label>Source Request Reference Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceSystemIdentifier__c</fullName>
        <label>Source System Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceSystemModified__c</fullName>
        <label>Source System Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__SourceSystem__c</fullName>
        <label>Source System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__UpperBaselineValueNumber__c</fullName>
        <label>Upper Baseline Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ValueInterpretationType__c</fullName>
        <label>Value Interpretation Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726237454_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareObservation_ComponentSourceRecor_rel</label>
        <referenceTo>ssot__PatientImmunization__dlm</referenceTo>
        <relationshipLabel>CareObservation_ComponentSourceRecor_rel</relationshipLabel>
        <relationshipName>rel_1716726237454_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726239275_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareObservation_BodySiteId_map_CodeS_rel</label>
        <referenceTo>ssot__CodeSetBundle__dlm</referenceTo>
        <relationshipLabel>CareObservation_BodySiteId_map_CodeS_rel</relationshipLabel>
        <relationshipName>rel_1716726239275_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726241506_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareObservation_DerivationSourceId_m_rel</label>
        <referenceTo>ssot__CareObservation__dlm</referenceTo>
        <relationshipLabel>CareObservation_DerivationSourceId_m_rel</relationshipLabel>
        <relationshipName>rel_1716726241506_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>